Changes in folder structure

--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
 
 
         </style>
-        <link href="css/component.css" type="text/css" rel="stylesheet"/> 
+        <link href="styles/component.css" type="text/css" rel="stylesheet"/> 
     </head>
 
     <body>
@@ -836,8 +836,8 @@
         <div style="text-align:center;padding:30px;">© 2014, Work HTML. All Rights Reserved. </div>
 
 
-        <script type="text/javascript" src="js/jquery-1.7.2.js"></script> 
-        <script type="text/javascript" src="js/jquery.scrollto.js"></script> 
+        <script type="text/javascript" src="js/vendor/jquery-1.7.2.js"></script> 
+        <script type="text/javascript" src="js/vendor/jquery.scrollto.js"></script> 
         <script type="text/javascript" src="js/application.js"></script> 
         <script>
             $(document).ready(function(){
