--- a/psd-to-html-conversion.html
+++ b/psd-to-html-conversion.html
@@ -597,7 +597,7 @@
 
             /*TYPING EFFECT @KEYFRAMES CSS3 FUNCTIONALITIES END*/
         </style>
-        <link href="css/component.css" type="text/css" rel="stylesheet"/> 
+        <link href="styles/component.css" type="text/css" rel="stylesheet"/> 
     </head>
 
     <body>
@@ -1242,8 +1242,8 @@ get ourselves updated regularly to align us to the current trend.</p>
             <div style="text-align:center;padding:10px;clear:both;width:980px;margin:0 auto;border-top:solid 1px #E9E9E9;color: #A0A0A0;">© 2014, Work HTML. All Rights Reserved. </div>
         </div>
         <script type="text/javascript" src="js/scroll.js"></script> 
-        <script type="text/javascript" src="js/jquery-1.7.2.js"></script> 
-        <script type="text/javascript" src="js/jQueryRotate.js"></script> 
+        <script type="text/javascript" src="js/vendor/jquery-1.7.2.js"></script> 
+        <script type="text/javascript" src="js/vendor/jQueryRotate.js"></script> 
         <script type="text/javascript" src="js/application.js"></script> 
         <script>
             //circles("process",{"milliSecond":"4000","circleClassName":"circle","circleSubClassName":"m-ar","totalCircleCount":"3","callback":"ourProcessCallback"});
