--- a/web-design.html
+++ b/web-design.html
@@ -5,7 +5,7 @@
         <link href="favicon.ico" rel="SHORTCUT ICON"/>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <style>
-            html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, canvas, embed, output, ruby, summary, time, mark, audio, video {
+               html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, canvas, embed, output, ruby, summary, time, mark, audio, video {
                 border: 0;
                 font-size: 100%;
                 font: inherit;
@@ -476,7 +476,7 @@
 
 
         </style>
-        <link href="css/component.css" type="text/css" rel="stylesheet"/> 
+        <link href="styles/component.css" type="text/css" rel="stylesheet"/> 
     </head>
 
     <body>
@@ -1273,8 +1273,8 @@ built CSS helps to reduce the load time and provides a faster experience.</p>
             <div class="copyright">© 2014, Work HTML. All Rights Reserved. </div>
         </section>
         <script type="text/javascript" src="js/scroll.js"></script> 
-        <script type="text/javascript" src="js/jquery-1.7.2.js"></script> 
-        <script type="text/javascript" src="js/jQueryRotate.js"></script> 
+        <script type="text/javascript" src="js/vendor/jquery-1.7.2.js"></script> 
+        <script type="text/javascript" src="js/vendor/jQueryRotate.js"></script> 
         <script type="text/javascript" src="js/application.js"></script> 
         <script>
             $(document).ready(function(){
