--- a/wordpress-development.html
+++ b/wordpress-development.html
@@ -544,7 +544,7 @@
             </div>
             <div style="text-align:center;padding:10px;clear:both;width:980px;margin:0 auto;border-top:solid 1px #E9E9E9;color: #A0A0A0;">© 2014, Work HTML. All Rights Reserved. </div>
         </div>
-        <script type="text/javascript" src="js/jquery-1.9.1.min.js">
+        <script type="text/javascript" src="js/vendor/jquery-1.9.1.min.js">
         </script> 
         <script>
             window.onscroll = scroll;  
