Page content correction made
Page content modification done for SEO
workhtml logo name changed as “”workhtml.png””

<meta> keywords and description added

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <link href="favicon.ico" rel="SHORTCUT ICON"/>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <meta name="Keywords" content="Workhtml,Website Design,wordpress developement,PSD to HTML Conversion,psd to xhtml service,online HTML Works,convert psd files to html,web html design,Wordpress Themes,wordpress templates,Wesite Services,professional web design companies,web design company,web solutions company,custom web design company,web hosting website,ecommerce hosting,webhosting,cheap web hosting plans,cheap web hosting,cheap hosting,best web hosting,web hosting server,server hosting" />
+        <meta name="description" content="Workhtml service help you to convert your PSD to HTML/XHTML format and wordpress related works.You can redesign/design your business model into real time also we can host it your design in live."
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'/>
         <style>
             html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, canvas, embed, output, ruby, summary, time, mark, audio, video {
@@ -520,7 +522,7 @@
         <div id="sidebar">
             <div id="nav-anchor"></div>
             <div style="float:left;">
-                <a href="index.html"><img src="img/logo-facebook.png"> </a>
+                <a href="index.html"><img src="img/workhtml.png"> </a>
             </div>
             <div style="float:right;">
                 <nav class="stick">
@@ -562,7 +564,7 @@
                             </li>
                             <li>
                                 <h1>we create <span>the web</span></h1>
-                                <p>We help you to connect to the world effectively. Our engineers understand your requirement and deliver more than you wanted.</p>
+                                <p>We help you to connect to the world effectively. Our engineers understand your requirement and deliver more than you expect.</p>
                                 <div style="clear:both;margin-top:40px;"> <a href="" class="more">more about us</a> </div>
                             </li>
                         </ul>
@@ -573,7 +575,7 @@
                 <div class="wr-hol" >
                     <div class="feat">
                         <h2><span>What</span> We Do</h2>
-                        <p class="desc">We build, customize, host websites based on your needs. We think as a visitor and make sure we are satisfied first and later everyone. We never compromise our quality and client focus is our main 
+                        <p class="desc">We build, customize, host websites based on your needs. We think as a visitor and make sure we are satisfied first and later everyone. We never compromise our quality, client focus is our main 
 
                             strength.</p>
                         <div class="">
@@ -620,7 +622,7 @@
                                             <div class="circle"> <a href="" target="_blank" ><img src="img/server-hosting.png" style="margin-top: 5px;" class="rotate" id="rotate-4"/></a></div>
                                             <div >
                                                 <h3>Web hosting</h3>
-                                                <p> Are you a .com, .org, .net, .co, .in? Choose a prefix for your website and we host it for you.</p>
+                                                <p> Are you a .com, .org, .net, .in, etc? Choose a suffix for your website and we host it for you.</p>
                                                 <p> coming soon...</p>
                                             </div>
                                         </li>
