--- a/psd-to-html-conversion.html
+++ b/psd-to-html-conversion.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <!--   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'/>  -->
+        <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'/>
         <link href="favicon.ico" rel="SHORTCUT ICON"/>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+         <meta name="Keywords" content="Workhtml,Website Design,PSD to HTML Conversion,psd to xhtml service,online HTML Works,convert psd files to html,web html design,professional web design companies,web design company,web solutions company,custom web design company" />
         <style>
             html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, canvas, embed, output, ruby, summary, time, mark, audio, video {
                 border: 0;
@@ -437,7 +438,7 @@
             {
                 background:url(img/icon.png) no-repeat;
                 height: 1px;
-                padding: 2px 10px;
+                padding: 5px 10px;
                 width: 1px;
                 margin-right:8px;
             }
@@ -605,16 +606,16 @@
         <div id="sidebar">
             <div id="nav-anchor"></div>
             <div style="float:left;">
-                <a href="index.html"><img src="img/logo-facebook.png"> </a>
+                <a href="index.html"><img src="img/workhtml.png"> </a>
             </div>
             <div style="float:right;">
                 <nav class="stick">
                     <ul >
                         <li><a href="index.html" >Home</a></li>
                         <li><a href="index.html" class="nav-active active-menu">Services</a></li>
-                        <li><a href="index.html" >Our work</a></li>
+                        <li><a href="index.html#our-work" >Our work</a></li>
 
-                        <li><a href="index.html" >Contact</a></li>
+                        <li><a href="index.html#contact" >Contact</a></li>
                     </ul>
                 </nav>
             </div>
@@ -697,7 +698,7 @@ detailing and make it a picture-perfect. </p>
             <section id="services">
                 <div class="wr-hol" >
                     <div class="feat">
-                        <h2>Why Choosen <span style="font-weight:300;">WorkHTML</span> </h2>
+                        <h2>Why to choose <span style="font-weight:300;">WorkHTML</span> </h2>
                         <p class="desc">We have the best resources, people, and ideas to provide best service. We are customer focused and we ensure our customers are
 satisfied. </p>
                         <div class="">
@@ -705,24 +706,21 @@ satisfied. </p>
                                 <li>
                                     <ul class="icon-det">
                                         <li>
-
-                                            <div>
-                                                <h3>good communication & support</h3>
-                                                <p>Our work is not
-over after delivering the website; we stand by and look after for any
-improvements or modifications. Our support team helps you to get the
-appropriate support all the time. </p>
+                                             <div>
+                                                <h3>100% satisfaction</h3>
+                                                <p> We make sure that we deliver world class service to each of our client and
+assure their satisfaction. We are fully committed and customer satisfaction is
+our primary goal.</p>
                                             </div>
+                                            
                                         </li>
                                         <li style="width:2px;border-right:solid 1px #ecebeb;height:105px;margin:0 50px;"> &nbsp; </li>
                                         <li>
 
-                                            <div>
-                                                <h3>100% satisfaction</h3>
-                                                <p> We make sure that we
-are well equipped to deliver world class service to each of our client and
-assure their satisfaction. We are fully committed and customer satisfaction is
-our primary goal.</p>
+                                             <div>
+                                                <h3>best development team</h3>
+                                                <p>Our specialized development team is well experienced and built sites for our clients across the world. Our development team not just create websites, they analyze, build and achieve
+that the best product is released from their end.  </p>
                                             </div>
                                         </li>
                                     </ul>
@@ -739,18 +737,20 @@ our primary goal.</p>
                                         <li>
 
                                             <div>
-                                                <h3>best development team</h3>
-                                                <p>Our specialized development team is well experienced and built sites for our clients across the world. Our development team not just creates websites, they analyze, build and achieve
-that the best product is released from their end.  </p>
+                                                <h3>quick process</h3>
+                                                <p>We understand
+things quickly, so we get the work done quickly with efficiency.</p>
                                             </div>
                                         </li>
                                         <li style="width:2px;border-right:solid 1px #ecebeb;height:105px;margin:0 50px;"> &nbsp; </li>
                                         <li>
 
-                                            <div>
-                                                <h3>quick process</h3>
-                                                <p>We understand
-things quickly, so we get the work done quickly with efficiency.</p>
+                                           <div>
+                                                <h3>good communication & support</h3>
+                                                <p>Our work is not
+over after delivering the website. We stand by and look after for any
+improvements or modifications. Our support team helps you to get the
+appropriate support all the time. </p>
                                             </div>
                                         </li>
                                     </ul>
@@ -876,7 +876,7 @@ get ourselves updated regularly to align us to the current trend.</p>
         <div>
 
             <div style="width:900px;margin:50px auto 60px;overflow:auto;">
-                <h4>our checklist <span>with your assignment</span></h4>
+                <h4>our checklist <span>for your assignment</span></h4>
                 <ul class="chec-li">
                     <li class="chec-l">
                         <ul>
@@ -1109,7 +1109,7 @@ get ourselves updated regularly to align us to the current trend.</p>
                 </div>
                 <div style="clear:both;overflow:auto;padding-top:20px;display:none;" id="processMsg2">
                     <h5>Accurate and Timely delivery</h5>
-                    <p>We promise to deliver with assigned timeline</p>
+                    <p>We promise to deliver with agreed timeline</p>
                 </div>
             </div>
         </div>
@@ -1145,7 +1145,7 @@ get ourselves updated regularly to align us to the current trend.</p>
             }
         </style>
         <div class="f-band">
-            <h2>10000 Projects completed for clients from 30 countries</h2><a href="contactus.html">Order Now</a>
+            <h2>Transform your ideas into real websites</h2><a href="contactus.html">Order Now</a>
         </div>
 
         <style>
