--- a/wordpress-development.html
+++ b/wordpress-development.html
@@ -2,8 +2,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <link href="favicon.ico" rel="SHORTCUT ICON"/>
-        <!--<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'/> -->
+        <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'/>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+         <meta name="Keywords" content="Workhtml,Wordpress Design,wordpress developement,Wordpress Themes,wordpress templates,wordpress themes development,wordpress website,wordpress website builder" />
+        <meta name="description" content="Workhtml service help you to convert your PSD to HTML/XHTML and wordpress related works.You can redesign/design your business model into real time also we can host it your design in live." />
         <style>
             html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, canvas, embed, output, ruby, summary, time, mark, audio, video {
                 border: 0;
@@ -282,7 +284,7 @@
             .fb, .tw, .li, .go {
                 background: url(img/icon.png) no-repeat;
                 height: 1px;
-                padding: 2px 10px;
+                padding: 5px 10px;
                 width: 1px;
                 margin-right: 8px;
             }
@@ -342,7 +344,7 @@
                 float: left;
                 width: 47%;
             }
-            .why-c h5 {
+            .why-c h5 { 
                 font-size: 18px;
                 margin-top: 30px;
                 text-align: center;
@@ -402,15 +404,15 @@
     <body>
         <div id="sidebar">
             <div id="nav-anchor"></div>
-            <div style="float:left;"> <a href="index.html"><img src="img/logo-facebook.png"> </a> </div>
+            <div style="float:left;"> <a href="index.html"><img src="img/workhtml.png"> </a> </div>
             <div style="float:right;">
                 <nav class="stick">
                     <ul >
                         <li><a href="index.html" >Home</a></li>
                         <li><a href="" class="nav-active active-menu">Services</a></li>
-                        <li><a href="index.html" >Our work</a></li>
+                        <li><a href="index.html#our-work" >Our work</a></li>
 
-                        <li><a href="index.html" >Contact</a></li>
+                        <li><a href="index.html#contact" >Contact</a></li>
                     </ul>
                 </nav>
             </div>
@@ -434,8 +436,8 @@
             <section id="services">
                 <div class="wr-hol" >
                     <div class="feat">
-                        <h2>Services</h2>
-                        <p class="desc">WordPress is currently used by more than 60 millions sites and most preferred CMS. We are focused towards the fast growth of WordPress and master ourselves to provide top class service.</p>
+                        <h2><span>Wordpress</span> Services</h2>
+                        <p class="desc">WordPress is currently used by more than 60 million sites and most preferred CMS. We are focused towards the fast growth of WordPress and master ourselves to provide top class service.</p>
                         <div class="">
                             <ul>
                                 <li>
@@ -502,7 +504,7 @@
             </div>
         </div>
         <div class="f-band">
-            <h2>10000 Projects completed for clients from 30 countries</h2>
+            <h2>Place your order for personalized themes</h2>
             <a href="contactus.html">Order Now</a> </div>
         <div style="background:#F3F3F3;border-top:solid 1px #DBDBDB;padding-top:20px;">
             <div style="width:900px;margin:0 auto;">
@@ -534,10 +536,10 @@
                             <li>
                                 <h6>social</h6>
                             </li>
-                            <li> <a href=""><span class="fb">&nbsp;</span>Facebook</a> </li>
-                            <li> <a href=""><span class="tw">&nbsp;</span>Twitter</a> </li>
-                            <li> <a href=""><span class="li">&nbsp;</span>Linkedin</a> </li>
-                            <li> <a href=""><span class="go">&nbsp;</span>Google plus</a> </li>
+                            <li> <a href="https://facebook.com/workhtml" target="_blank"><span class="fb">&nbsp;</span>Facebook</a> </li>
+                            <li> <a href="https://twitter.com/workhtml" target="_blank"><span class="tw">&nbsp;</span>Twitter</a> </li>
+                            <li> <a href="https://facebook.com/workhtml" target="_blank"><span class="li">&nbsp;</span>Linkedin</a> </li>
+                            <li> <a href="https://www.facebook.com/workhtml" target="_blank"><span class="go">&nbsp;</span>Google plus</a> </li>
                         </ul>
                     </li>
                 </ul>
