Corrected spelling mistake in PSD to Html content.

--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@
                                             <a href="psd-to-html-conversion.html"> <div class="circle"><img src="img/psd-to-html-icon.png" style="margin-top: 5px;" class="rotate" id="rotate-2"/></div></a>
                                             <div >
                                                 <a href="psd-to-html-conversion.html"> <h3>PSD to HTML</h3>
-                                                    <p>Get your ideas transform into a real website. Share your ides with us in any common format, we will build the website with all your detailing and make it a picture-perfect.</p></a>
+                                                    <p>Get your ideas transform into a real website. Share your ideas with us in any common format, we will build the website with all your detailing and make it a picture-perfect.</p></a>
                                             </div>
                                         </li>
                                     </ul>
