--- a/psd-to-html-conversion.html
+++ b/psd-to-html-conversion.html
@@ -687,7 +687,7 @@
                             </li>
                             <li style="padding-left: 50px;  width: 40%;">
                                 <h1>PSD to HTML <span>conversion</span></h1>
-                                <p>Get your ideas transform into a real website. Share your ides with us in any common format, we will build the website with all your
+                                <p>Get your ideas transform into a real website. Share your ideas with us in any common format, we will build the website with all your
 detailing and make it a picture-perfect. </p>
 
                             </li>
