Spelling correction & SEO related content changes
* Spelling mistake corrected in many places.
* <meta></meta> description and Keyword added.
* In Index page “Our Sample Work” images are changed.
* Mail validation issue fixed in “contact us” form .

--- a/psd-to-html-conversion.html
+++ b/psd-to-html-conversion.html
@@ -5,6 +5,7 @@
         <link href="favicon.ico" rel="SHORTCUT ICON"/>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
          <meta name="Keywords" content="Workhtml,Website Design,PSD to HTML Conversion,psd to xhtml service,online HTML Works,convert psd files to html,web html design,professional web design companies,web design company,web solutions company,custom web design company" />
+        <meta name="description" content="Workhtml service help you to convert your PSD to HTML/XHTML and wordpress related works.You can redesign/design your business model into real time also we can host it your design in live." />
         <style>
             html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, canvas, embed, output, ruby, summary, time, mark, audio, video {
                 border: 0;
@@ -612,7 +613,7 @@
                 <nav class="stick">
                     <ul >
                         <li><a href="index.html" >Home</a></li>
-                        <li><a href="index.html" class="nav-active active-menu">Services</a></li>
+                        <li><a href="index.html#services" class="nav-active active-menu">Services</a></li>
                         <li><a href="index.html#our-work" >Our work</a></li>
 
                         <li><a href="index.html#contact" >Contact</a></li>
@@ -1123,6 +1124,7 @@ get ourselves updated regularly to align us to the current trend.</p>
                 overflow: auto;
                 padding:50px 0;
                 width:980px;
+                margin-left: 114px;
             }
             .f-band a
             {
@@ -1142,6 +1144,7 @@ get ourselves updated regularly to align us to the current trend.</p>
                 font-size: 22px;float: left;line-height:30px;margin-top:10px;
                 font-weight: 400;
                 color:#666;
+                margin-left: 217px;
             }
         </style>
         <div class="f-band">
@@ -1185,16 +1188,16 @@ get ourselves updated regularly to align us to the current trend.</p>
                                 <h6>services</h6>
                             </li>
                             <li>
-                                <a href="">Wordpress Developement</a>
+                                <a href="wordpress-development.html">Wordpress Developement</a>
                             </li>
                             <li>
-                                <a href="">PSD to HTML Conversion</a>
+                                <a href="#">PSD to HTML Conversion</a>
                             </li>
                             <li>
-                                <a href="">Website Design</a>
+                                <a href="web-design.html">Website Design</a>
                             </li>
                             <li>
-                                <a href="">Web hosting</a>
+                                <a href="#">Web hosting</a>
                             </li>
                         </ul>
                     </li>
@@ -1210,10 +1213,10 @@ get ourselves updated regularly to align us to the current trend.</p>
                                 <a href="">About Us</a>
                             </li>
                             <li>
-                                <a href="">Contact Us</a>
+                                <a href="index.html#contact">Contact Us</a>
                             </li>
                             <li>
-                                <a href="">Sample work</a>
+                                <a href="index.html#our-work">Sample work</a>
                             </li>
                         </ul>
                     </li>
