--- a/wordpress-development.html
+++ b/wordpress-development.html
@@ -306,6 +306,7 @@
                 overflow: auto;
                 padding: 50px 0;
                 width: 980px;
+                margin-left:114px;
             }
             .f-band a {
                 float: right;
@@ -328,6 +329,7 @@
                 margin-top: 10px;
                 font-weight: 400;
                 color: #666;
+                margin-left: 197px;
             }
             /* */
             .why-c {
@@ -409,7 +411,7 @@
                 <nav class="stick">
                     <ul >
                         <li><a href="index.html" >Home</a></li>
-                        <li><a href="" class="nav-active active-menu">Services</a></li>
+                        <li><a href="index.html#services" class="nav-active active-menu">Services</a></li>
                         <li><a href="index.html#our-work" >Our work</a></li>
 
                         <li><a href="index.html#contact" >Contact</a></li>
@@ -514,10 +516,10 @@
                             <li>
                                 <h6>services</h6>
                             </li>
-                            <li> <a href="">Wordpress Developement</a> </li>
-                            <li> <a href="">PSD to HTML Conversion</a> </li>
-                            <li> <a href="">Website Design</a> </li>
-                            <li> <a href="">Web hosting</a> </li>
+                            <li> <a href="#">Wordpress Developement</a> </li>
+                            <li> <a href="psd-to-html-conversion.html">PSD to HTML Conversion</a> </li>
+                            <li> <a href="web-design.html">Website Design</a> </li>
+                            <li> <a href="#">Web hosting</a> </li>
                         </ul>
                     </li>
                     <li class="thr-li">
@@ -527,8 +529,8 @@
                             </li>
                             <li> <a href="">Blog</a> </li>
                             <li> <a href="">About Us</a> </li>
-                            <li> <a href="">Contact Us</a> </li>
-                            <li> <a href="">Sample work</a> </li>
+                            <li> <a href="index.html#contact">Contact Us</a> </li>
+                            <li> <a href="index.html#our-work">Sample work</a> </li>
                         </ul>
                     </li>
                     <li class="thr-li" style="width:16%;">
