offline font support & delete unwanted files
* Previously we used google fonts to use “Open Sans” font in our
website. Now we make this option to offline that means we put local
“Open Sans font file and linked with css..

* Delete unwanted folder.

--- a/wordpress-development.html
+++ b/wordpress-development.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <link href="favicon.ico" rel="SHORTCUT ICON"/>
-        <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'/>
+        <link href='./styles/font.css' rel='stylesheet' type='text/css'/>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
          <meta name="Keywords" content="Workhtml,Wordpress Design,wordpress developement,Wordpress Themes,wordpress templates,wordpress themes development,wordpress website,wordpress website builder" />
         <meta name="description" content="Workhtml service help you to convert your PSD to HTML/XHTML and wordpress related works.You can redesign/design your business model into real time also we can host it your design in live." />
