--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <meta name="Keywords" content="Workhtml,Website Design,wordpress developement,PSD to HTML Conversion,psd to xhtml service,online HTML Works,convert psd files to html,web html design,Wordpress Themes,wordpress templates,Wesite Services,professional web design companies,web design company,web solutions company,custom web design company,web hosting website,ecommerce hosting,webhosting,cheap web hosting plans,cheap web hosting,cheap hosting,best web hosting,web hosting server,server hosting" />
         <meta name="description" content="Workhtml service help you to convert your PSD to HTML/XHTML and wordpress related works.You can redesign/design your business model into real time also we can host it your design in live." />
-        <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'/>
+        <link href='./styles/font.css' rel='stylesheet' type='text/css'/>
         <style>
             html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, canvas, embed, output, ruby, summary, time, mark, audio, video {
                 border: 0;
@@ -638,36 +638,6 @@
                 </div>
             </section>
             <section id="our-work" class="section">
-                 <style>
-                            .round-point {
-                                top: 20px;
-                                left: -10px;
-                                width: 10px;
-                                height: 10px;
-                                position: absolute;
-                                background: #0099DA;
-                                margin: 0 0 0 -17px;
-                                box-shadow: 0 0 0 4px #EEE;
-                                -webkit-font-smoothing: antialiased;
-                                border-radius: 30px;
-                                z-index: 20;
-                            }
-                                #navigation {
-                                    width: 52px;
-                                    height: 76px;
-                                    display: none;
-                                    background: url(./img/next-prev.png) no-repeat;
-                                    position: absolute;
-                                    right: -170px;
-                                    /* top: 65px; */
-                                    top: 37%;
-                                    text-indent: -9999px;
-                                    z-index: 10;
-                                    cursor: pointer;
-                                    text-indent: -9999px;
-                                    -webkit-transition: all .3s ease;
-                                }
-                            </style>
                 <div class="wr-hol" >
                     <div class="s-work" id="our-work-slides" >
                         <h2><span>Sample Our</span> Work</h2>
