--- a/psd-to-html-conversion.html
+++ b/psd-to-html-conversion.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'/>
+        <link href='./styles/font.css' rel='stylesheet' type='text/css'/>
         <link href="favicon.ico" rel="SHORTCUT ICON"/>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
          <meta name="Keywords" content="Workhtml,Website Design,PSD to HTML Conversion,psd to xhtml service,online HTML Works,convert psd files to html,web html design,professional web design companies,web design company,web solutions company,custom web design company" />
